src/static/kit/styles.css
/* ... */
/* ================================ SIM CSS ================================ */
@keyframes spin {
	0% {
		 webkit-transform: rotate(0deg);
		transform: rotate(0deg);
	}
	100% {
		-webkit-transform: rotate(360deg);
		transform: rotate(360deg);
	}
}

#clock > sup,
*[datetime] > sup/*,
.submissions th.time > sup,
.problems th.added > sup,
.jobs th.added > sup,
.files th.time > sup */{
	width: 3.5em;
	display: inline-block;
	text-align: left;
}
* {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}
html {
	font-family: Ubuntu,"Helvetica Neue",Helvetica,"Segoe UI",Arial,freesans,sans-serif;
	font-size: 14px;
	line-height: 20px;
}
body {
	display: block;
	padding: 50px 10px 15px;
}
body h1 {
	margin: 0;
	font-size: 35px;
	font-weight: normal;
	line-height: 45px;
}
body h2 {
	margin: 5px 0;
	font-size: 26px;
	font-weight: normal;
	line-height: 37px;
}
body h3 {
	margin: 5px 0;
	font-size: 16px;
	font-weight: normal;
	line-height: 22px;
}
body h4 {
	margin: 5px 0;
	font-size: 14px;
	font-weight: normal;
	line-height: 20px;
}
pre {
	font-family: monospace;
}
table {
	border-spacing: 0;
}
.monospace {
	font-family: "Ubuntu Mono",Monaco,Menlo,Consolas,"Courier New",monospace;
}

/* Modal (background) */
.modal {
	position: fixed;
	z-index: 100;
	text-align: center;
	padding-top: 20%;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	overflow: auto;
	background-color: #999; /* Fallback color */
	background-color: rgba(0,0,0,0.4);
}
/* Modal content */
.modal > div {
	display: inline-flex;
	text-align: initial;
	flex-flow: column nowrap;
	background-color: #fefefe;
	margin: 4px 1px 64px;
	padding: 20px;
	border: 1px solid #888;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
}
.modal:not(.preview) > div > h2 {
	margin: 5px 0 12px;
	font-size: 24px;
	font-weight: normal;
	line-height: 28px;
	text-align: center;
}
/* The Close Button */
.modal .close {
	color: #aaaaaa;
	margin: -14px -10px -6px 0;
	padding: 2px;
	font-size: 28px;
	font-weight: bold;
    align-self: flex-end;
    z-index: 2;
}
.modal .close::after {
	content: "×";
}
.modal .close:hover,
.modal .close:focus {
	color: #000;
	text-decoration: none;
	cursor: pointer;
}
/* Modal forms */
.modal form .field-group {
	margin-bottom: 8px;
}
.modal #modal_req_status {
	padding: 1px 4px;
}

.btn,
.btn-small {
	cursor: pointer;
	color: #000000;
	text-decoration: none !important;
	background-color: #ededed;
	background-image: linear-gradient(#f9f9f9, #d8d8d8);
	border: 1px solid #bbbbbb;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
}
.btn {
	min-height: 30px;
	padding: 4px 11px;
	margin: 2px;
	-webkit-align-self: flex-start;
	align-self: flex-start;
}
.btn-small {
	display: inline-block;
	height: 26px;
	margin: 2px 3px;
	padding: 2px 10px;
	white-space: pre;
	font-size: 14px;
	line-height: 20px;
}
.btn:hover,
.btn:focus,
.btn-small:hover,
.btn-small:focus {
	color: #000000;
	background-color: #e2e2e2;
	background-image: none;
	outline: none;
}
.btn:focus,
.btn-small:focus {
	border-color: #51a7e8;
	box-shadow: 0 0 8px 1px #52a8ec;
}
.btn:active,
.btn-small:active {
	color: #000000;
	background-color: #d3d3d3;
	background-image: none;
	box-shadow: inset 0 2px 4px rgba(0,0,0,0.15);
}

/* Blue button */
.btn.blue,
.btn-small.blue {
	color: #ffffff;
	background-color: #0074cc;
	background-image: linear-gradient(#1088cc, #0044cc);
	border: 1px solid #0055cc;
}
.btn.blue:hover,
.btn.blue:focus,
.btn-small.blue:hover,
.btn-small.blue:focus {
	background-color: #0063cc;
	background-image: none;
}
.btn.blue:focus,
.btn-small.blue:focus {
	box-shadow: 0 0 8px 1px #0055cc;
}
.btn.blue:active,
.btn-small.blue:active {
	background-color: #0053cc;
	background-image: none;
	box-shadow: inset 0 2px 4px rgba(0,0,0,0.15);
}

/* Red button */
.btn.red,
.btn-small.red {
	color: #ffffff;
	background-color: #df524d;
	background-image: linear-gradient(#ee5f5b, #c73e38);
	border: 1px solid #d43c33;
}
.btn.red:hover,
.btn.red:focus,
.btn-small.red:hover,
.btn-small.red:focus {
	background-color: #d94d48;
	background-image: none;
}
.btn.red:focus,
.btn-small.red:focus {
	box-shadow: 0 0 8px 1px #cc3d37;
}
.btn.red:active,
.btn-small.red:active {
	background-color: #ca4741;
	background-image: none;
	box-shadow: inset 0 2px 4px rgba(0,0,0,0.15);
}

/* Orange button */
.btn.orange,
.btn-small.orange {
	color: #ffffff;
	background-color: #f6a839;
	background-image: linear-gradient(#fbba5d, #f19615);
	border: 1px solid #e29b35;
}
.btn.orange:hover,
.btn.orange:focus,
.btn-small.orange:hover,
.btn-small.orange:focus {
	background-color: #ef9d2a;
	background-image: none;
}
.btn.orange:focus,
.btn-small.orange:focus {
	box-shadow: 0 0 8px 1px #f59b1a;
}
.btn.orange:active,
.btn-small.orange:active {
	background-color: #e8941c;
	background-image: none;
	box-shadow: inset 0 2px 4px rgba(0,0,0,0.15);
}

/* Green button */
.btn.green,
.btn-small.green {
	color: #ffffff;
	background-color: #48a848;
	background-image: linear-gradient(#4fba4f, #429442);
	border: 1px solid #3e8e3e;
}
.btn.green:hover,
.btn.green:focus,
.btn-small.green:hover,
.btn-small.green:focus {
	background-color: #449d44;
	background-image: none;
}
.btn.green:focus,
.btn-small.green:focus {
	box-shadow: 0 0 8px 1px #359735;
}
.btn.green:active,
.btn-small.green:active {
	background-color: #398439;
	background-image: none;
	box-shadow: inset 0 2px 4px rgba(0,0,0,0.15);
}

textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"] {
	padding: 4px;
	line-height: 20px;
	color: #555555;
	border: 1px solid #cccccc;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
	outline: none;
}
/* ... */

